form width, carousel btns align fixed

--- a/scss/layout/contact/contact-media.scss
+++ b/scss/layout/contact/contact-media.scss
@@ -64,12 +64,16 @@
       }
       form{
         margin: 10px;
+        min-width: 320px;
         padding: 10px 20px 30px 20px;
 
         input{
-          width: 180px;
+          // width: 180px;
+          width: calc(100% - 40px);
           padding: 8px 20px;
         }
+
+        
       }
     }
 
