--- a/scss/layout/testi/testi-media.scss
+++ b/scss/layout/testi/testi-media.scss
@@ -27,40 +27,42 @@
 }
 
 @media (max-width: 376px) {
-  .testi{
-    .carousel-nav {   
+  .testi {
+    .carousel-nav {
+      &__btns {
+        height: 40px;
+        height: 40px;
+        align-items: center;
+      }
       margin: 0;
-      h3{
+      h3 {
         margin-bottom: 0;
       }
     }
 
-
-
-    &__carousel{
+    &__carousel {
       margin-top: 20px;
-      &-title{
+      &-title {
         text-align: center;
         min-width: 320px;
       }
-      .item{
+      .item {
         width: 280px;
         padding: 5px;
 
-        &-text{
+        &-text {
           padding: 10px;
         }
 
-        &__profile{
+        &__profile {
           margin-left: 5px;
           margin-top: 30px;
         }
       }
-      
-      .owl-item{
+
+      .owl-item {
         left: -10px;
       }
     }
   }
-  
 }
